--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Build and Push
+name: Generate a build and push to another branch
 
 on:
   push:
@@ -8,24 +8,22 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    name: Build and Push
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: git-checkout
+        uses: actions/checkout@v2
 
-    - name: Install dependencies
-      run: npm install
+      - name: Install all dependencies
+        run: npm install
 
-    - name: Build
-      run: npm run build
+      - name: Build
+        run: npm run build # The build command of your project
 
-    - name: Push to build branch
-      run: |
-        git config --global user.name "Gavin White"
-        git config --global user.email "gavinwhite0314@gmail.com"
-        git checkout -b build
-        git add .
-        git commit -m "Build assets"
-        git push origin build
-
-
+      - name: Push
+        uses: s0/git-publish-subdir-action@develop
+        env:
+          REPO: self
+          BRANCH: build # The branch name where you want to push the assets
+          FOLDER: dist # The directory where your assets are generated
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub will automatically add this - you don't need to bother getting a token
+          MESSAGE: "Build: ({sha}) {msg}" # The commit message
