--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Generate a build and push to another branch
+name: Generate a build and deploy to Hostinger
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Build and Push
+    name: Build and Deploy
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -19,11 +19,9 @@ jobs:
       - name: Build
         run: npm run build # The build command of your project
 
-      - name: Push
-        uses: s0/git-publish-subdir-action@v2
-        env:
-          REPO: self
-          BRANCH: build # The branch name where you want to push the assets
-          FOLDER: dist # The directory where your assets are generated
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub will automatically add this - you don't need to bother getting a token
-          MESSAGE: "Build: ({sha}) {msg}" # The commit message
+      - name: Push to Hostinger
+        run: |
+          git config --global user.name "Gavin White"
+          git config --global user.email "gavinwhite0314@gmail.com"
+          git remote add hostinger <your-hostinger-git-repository-url>
+          git push hostinger build
