--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Generate a build and deploy to Hostinger
+name: Generate a build and push to another branch
 
 on:
   push:
@@ -8,14 +8,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Build and Deploy
+    name: Build and Push
     steps:
-      - name: Use Node.js 20
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-
-      - name: Checkout code
+      - name: git-checkout
         uses: actions/checkout@v2
 
       - name: Install all dependencies
@@ -24,9 +19,11 @@ jobs:
       - name: Build
         run: npm run build # The build command of your project
 
-      - name: Push to Hostinger
-        run: |
-          git config --global user.name "Gavin White"
-          git config --global user.email "gavinwhite0314@gmail.com"
-          git remote add hostinger <https://github.com/gavinwhite03/react-portfolio.git>
-          git push hostinger main
+      - name: Push
+        uses: s0/git-publish-subdir-action@develop
+        env:
+          REPO: self
+          BRANCH: build # The branch name where you want to push the assets
+          FOLDER: dist # The directory where your assets are generated
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub will automatically add this - you don't need to bother getting a token
+          MESSAGE: "Build: ({sha}) {msg}" # The commit message
