--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.5.0",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
@@ -16,6 +20,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "tailwindcss": "^3.4.1",
+    "typescript": "^5.9.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
